src/scss/menu.scss
.mobile-nav {
  @apply bg-white text-black absolute shadow;
  border-top-left-radius: 5%;
  border-bottom-left-radius: 50%;
  height: 100vh;
  width: 100vw;
  left: 0;
  top: 0;
  transform: translate3d(100%, -100%, 0);
  opacity: 0;
  transition: transform 0.216s ease 0.05s, border-radius 0.216s ease 0.216s;
}

nav > a.active {
  @apply underline opacity-100;
  text-decoration-color: #c53030;
}

/**
 * Side effects from open menu
 */
body {
  #site-footer {
    transition: transform 0.216s ease 0s;
    transform: translate3d(0, 0, 0);
  }

  &.menu-open {
    #site-footer {
      transform: translate3d(0, 100%, 0);
    }

    .mobile-nav {
      transform: translate3d(0, 0, 0);
      opacity: 1;
      border-radius: 0%;
    }
  }
}

